--- a/app.json
+++ b/app.json
@@ -15,19 +15,22 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/LazyDeveloperr/LazyPrincess",
-    "repository": "https://github.com/LazyDeveloperr/LazyPrincess",
+    "website": "https://github.com/iwhiwh/lazydeveloparbot",
+    "repository": "https://github.com/iwhiwh/lazydeveloparbot",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
+            "value": "6111982752:AAH3VNBhcPvleKamxgLCGmwpCTEOiYxQw2M",
             "required": true
         },
         "API_ID": {
             "description": "Get this value from https://my.telegram.org",
+            "value": "24579842",
             "required": true
         },
         "API_HASH": {
             "description": "Get this value from https://my.telegram.org",
+            "value": "ec6105bf1a02c98f837300546dc341d1",
             "required": true
         },
         "CHANNELS": {
@@ -36,6 +39,7 @@
         },
         "ADMINS": {
             "description": "Username or ID of Admin. Separate multiple Admins by space.",
+            "value": "1991522624",
             "required": true
         },
         "PICS": {
@@ -44,6 +48,7 @@
         },
         "LOG_CHANNEL": {
             "description": "Bot Logs,Give a channel id with -100xxxxxxx",
+            "value": "-1001912840788',
             "required": true
         },
         "AUTH_USERS": {
@@ -56,6 +61,7 @@
         },
         "DATABASE_URI": {
             "description": "mongoDB URI. Get this value from https://www.mongodb.com.",
+            "value": "mongodb+srv://happythehour:skumar(2006)@cluster0.wttyshn.mongodb.net/?retryWrites=true&w=majority",
             "required": true
         },
         "DATABASE_NAME": {
