--- a/app.json
+++ b/app.json
@@ -48,7 +48,7 @@
         },
         "LOG_CHANNEL": {
             "description": "Bot Logs,Give a channel id with -100xxxxxxx",
-            "value": "-1001912840788',
+            "value": "-1001912840788",
             "required": true
         },
         "AUTH_USERS": {
